[ FIX ] Not showing movement styles when loading from db

--- a/frontend/src/styles/Tables.css
+++ b/frontend/src/styles/Tables.css
@@ -77,6 +77,7 @@ tr.odd-row:hover {
   overflow-y: auto;
   flex-grow: 1;
   min-height: 0;
+  border-radius: var(--radius-md);
   will-change: transform;
   width: 100%;
 }
